--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Cristian Tobar
-#logo: /assets/img/headshot_circle.png
-#description: text below image 
+logo: /assets/profile.png
+description: I am a Data Scientist, Machine Learning Researcher and PhD Candidate from Colombia 🇨🇴
 #show_downloads: true 
 theme: jekyll-theme-minimal
